feat: product listing and filters done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
     <div class="img-carousel">
-        <img src="assets\\images\\marvel-slider-1920-1920x450.webp" alt="" class="image" id="carousel">
+        <img src="assets\images\marvel-slider-1920-1920x450.webp" alt="" class="image" id="carousel">
     </div>
 
     <div class="product-categories">
