--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img src="./assets\images\marvel poster.webp" alt="" class="category-image">
                 
                 <div class="btn-section">
-                    <button class="btn btn-primary">View Products</button>
+                    <a href="./productListing/productListing.html"> <button class="btn btn-primary">View Products</button></a>
                 </div>
             </div>
 
