--- a/productListing/productListing.html
+++ b/productListing/productListing.html
@@ -22,8 +22,8 @@
         </div>
         
         <div class="nav-side">
-            <i class="fas fa-heart navbar-icons"></i>
-            <i class="fas fa-shopping-cart navbar-icons"></i>
+            <a href="./wishlist/wishlist.html"> <i class="fas fa-heart navbar-icons" title="Wishlist"></i></a>
+           <a href="./wishlist/wishlist.html"><i class="fas fa-shopping-cart navbar-icons" title="Shopping Cart"></i></a>
             <a href="..\signIn and SignUp\signIn.html"> <button class="btn btn-primary">Log In</button></a>
         </div>
         
