fix: link fixed

--- a/productListing/productListing.html
+++ b/productListing/productListing.html
@@ -23,7 +23,7 @@
         
         <div class="nav-side">
             <a href="../wishlist/wishlist.html"> <i class="fas fa-heart navbar-icons" title="Wishlist"></i></a>
-           <a href="./Cart/cart.html"><i class="fas fa-shopping-cart navbar-icons" title="Shopping Cart"></i></a>
+           <a href="../Cart/cart.html"><i class="fas fa-shopping-cart navbar-icons" title="Shopping Cart"></i></a>
             <a href="..\signIn and SignUp\signIn.html"> <button class="btn btn-primary">Log In</button></a>
         </div>
         
